--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   webfeed: ^0.7.0
   http: ^0.13.4
   cached_network_image: ^3.1.0+1
+  progress_dialog: ^1.2.4
   flutter:
     sdk: flutter
 
