--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   http: ^0.13.4
   cached_network_image: ^3.1.0+1
   progress_dialog: ^1.2.4
+  xml2json: ^5.3.2
+  shared_preferences: ^2.0.13
+  connectivity_plus: ^2.1.0
   flutter:
     sdk: flutter
 
